Fix wrap with new menu item

--- a/main.css
+++ b/main.css
@@ -388,6 +388,10 @@ footer ul a:last-of-type {
     padding: 0.5em;
   }
 
+  .cart-button {
+    width: 50%;
+  }
+
   .nav-shopping-cart {
     width: 40%;
   }
